fixing minor alignment bug

--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ body {
   padding: 80px;
 }
 
+#contact-me p {
+  margin: auto;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
